<resources>
    <string name="app_name">MoveOn</string>
    <string name="app_complete_name">MoveOn Sports Tracker</string>
    <string name="bluetooth_sensor_key">bluetoothSensor</string>
    <string name="bluetooth_smart_sensor_key">bluetoothSmartSensor</string>
    <string name="sensor_type_key">sensorType</string>
    <string name="none">NONE</string>
    <string name="polar_sensor_type">POLAR</string>
    <string name="zephyr_sensor_type">ZEPHYR</string>
    <string name="ant_sensor_type">ANT</string>
    <string name="btle_sensor_type">BLUETOOTH SMART</string>
    <string name="sensor_data_time">Sensor data time</string>
    <string name="power_meter_enabled">Power meter enabled</string>
    <string name="heart_rate_monitor_enabled">Heart rate monitor enabled</string>
    <string name="no_sensor_manager">No sensor manager</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="sensor_state_connecting">Connecting</string>
    <string name="sensor_state_connected">Connected</string>
    <string name="sensor_state_disconnected">Disconnected</string>
    <string name="sensor_state_sending">Sensor is sending</string>
    <string name="no_sensor_service">No sensor service</string>
    <string name="searching">Searching</string>
    <string name="sending">Sending</string>
    <string name="sensor_type">Type of sensor</string>
    <string name="settings_sensor_ant_not_connected" translation_description="In the 'Sensor' settings, the summary to indicate that an ANT+ sensor
      	is not connected.">Not connected</string>
    <string name="settings_sensor_connected" translation_description="A message when a sensor is connected.
		%1$s: sensor name. E.g., 'Polar Bluetooth'.">Connected to %1$s</string>
    <string name="settings_sensor_type_ant" translation_description="In the 'Sensor' settings, the option in the 'Sensor type' picker to
      	choose an ANT+ sensor. Note that ANT+ is a radio standard.">ANT+</string>
    <string name="settings_sensor_ant_reset_heart_rate_monitor" translation_description="In the 'Sensor' settings, under the 'ANT+' section, the option to reset
      	an ANT+ heart rate monitor. Note that ANT+ is a radio standard.">Reset heart rate mointor</string>
    <string name="settings_sensor_ant_reset_speed_distance_monitor" translation_description="In the 'Sensor' settings, under the 'ANT+' section, the option to reset
      	an ANT+ stride based speed distance monitor, also known as foot pod. Note that ANT+ is a radio
      	standard.">Reset speed distance monitor (experimental)</string>
    <string name="settings_sensor_ant_reset_bike_cadence_sensor" translation_description="In the 'Sensor' settings, under the 'ANT+' section, the option to reset
      	an ANT+ bike cadence sensor. Note that ANT+ is a radio standard.">Reset bike cadence sensor (experimental)</string>
    <string name="settings_sensor_ant_reset_combined_bike_sensor" translation_description="In the 'Sensor' settings, under the 'ANT+' section, the option to reset
      	an ANT+ combined bike cadence and speed sensor. Note that ANT+ is a radio standard.">Reset combined bike sensor (experimental)</string>
    <string name="voice_coach">Enable or disable voice coach</string>
    <string name="camera">Make photos in your practices</string>
    <string name="padlock">Lock widgets</string>
    <string name="music">Starts music player</string>
    <string name="settings">Application settings</string>
    <string name="time_label">Duration</string>
    <string name="distance_label">Distance</string>
    <string name="avg_label_complete">Average speed</string>
    <string name="speed_label">Speed</string>
    <string name="max_speed_label_complete">Maximum speed</string>
    <string name="ritm_label_complete">Average ritm</string>
    <string name="altitude_label">Altitude</string>
    <string name="steps_label">Steps</string>
    <string name="heart_rate_label_complete">Beats per minute</string>
    <string name="cadence_label_complete">Revolutions per minute</string>
    <string name="long_unit1">Metric</string>
    <string name="general_settings_title">Basic preferences</string>
    <string name="general_settings_details">Metric units, countdown, auto-lock and auto-pause</string>
    <string name="units_setting">Unit of measure</string>
    <string name="units_setting_details">Metric or imperial unit</string>
    <string name="units_setting_title">Select type</string>
    <string name="user_setting">User settings</string>
    <string name="user_setting_details">Configure the settings of your profile for a more accurate calculation of calories or manage your shoes here</string>
    <string name="karvonen_setting">Heart rate ranges</string>
    <string name="karvonen_setting_title">Configure your HR data</string>
    <string name="karvonen_setting_details">Configure the data of your heart rate or automatically calculate them here</string>
    <string name="shoes_setting">Manage your shoes</string>
    <string name="shoes_setting_title">My shoes</string>
    <string name="shoes_setting_details">Create new shoes, delete unused or check the use of each one</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="necessary_to_calculate_calories">Necessary to calculate calories</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="gender_setting">Gender</string>
    <string name="gender_setting_title">Select your gender</string>
    <string name="auto_pause_setting_title">Auto pause</string>
    <string name="auto_pause_setting_details">Configure when to activate the auto-pause (not applicable to interval training)</string>
    <string name="sensitivity_title">Sensitivity</string>
    <string name="sensitivity_details">Calibrate the motion sensor (pedometer)</string>
    <string name="sensitivity_settings_title">Select sensitivity level</string>
    <string name="map_tile_title">Map</string>
    <string name="map_tile_details">Select the type of map to show</string>
    <string name="map_tile_settings_title">Map types</string>
    <string name="screen_settings_title">Screen adjustment</string>
    <string name="operation_level_setting_details">Some devices prevent the use of motion sensors when the screen is off. Choose the level that best suits to your terminal.</string>
    <string name="voice_settings_title">Audio preferences</string>
    <string name="voice_settings_details">Sets the virtual coach, sounds and alerts</string>
    <string name="voice_title">Voice</string>
    <string name="voice_setting">Voice information</string>
    <string name="voice_setting_details">Enable/disable sound notifications</string>
    <string name="voice_summary">General settings of the virtual voice coach</string>
    <string name="speaking_time_interval_setting">Select time interval</string>
    <string name="speaking_time_interval_setting_title">Select interval (minutes)</string>
    <string name="speaking_time_interval_setting_details">Time interval between sound notifications</string>
    <string name="speaking_distance_interval_setting">Select distance interval</string>
    <string name="speaking_distance_interval_setting_title">Select interval (km. or mi.)</string>
    <string name="speaking_distance_interval_setting_details">Distance interval between sound notifications</string>
    <string name="tell_what">Select information</string>
    <string name="tell_what_setting_details">Customize the information to notify</string>
    <string name="tell_units_details">Kilometers or miles</string>
    <string name="tell_speed_units_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details">kcal</string>
    <string name="tell_altitude_setting_details">meters or yards</string>
    <string name="tell_heart_rate_setting">Heartbeat</string>
    <string name="tell_cadence_setting">Cadence</string>
    <string name="audio_settings_title">Alerts and sounds (HIIT)</string>
    <string name="countdown_title">Countdown time</string>
    <string name="countdown_summary">Set the countdown time before practice begins</string>
    <string name="lock_title">Auto lock</string>
    <string name="lock_summary">The application locked when practice begins</string>
    <string name="hiit_summary">Alerts and sounds settings for HIIT</string>
    <string name="hiit_countdown_summary">Sets the time for alert and/or voice alerts</string>
    <string name="hiit_countdown_tts_title">Voice countdown</string>
    <string name="hiit_current_interval_title">Voice current interval</string>
    <string name="hiit_current_interval_summary">Announces the current interval as start (it will be ignored if time is not greater to countdown value + 6 sec. for next interval notification)</string>
    <string name="hiit_next_interval_title">Voice next interval</string>
    <string name="hiit_next_interval_summary">Announces the next interval as start (it will be ignored if time is not greater to countdown value + 6 sec. for current interval notification (if enabled) + 6 sec. for next interval notification)</string>
    <string name="hiit_sound_title">Sound notification</string>
    <string name="hiit_sound_summary">Use sound alerts</string>
    <string name="hiit_vibrate_title">Vibration notification</string>
    <string name="hiit_vibrate_summary">Vibrate during alerts</string>
    <string name="accessories_type_title">Accessories</string>
    <string name="accessories_type_summary">Bluetooth or ANT+ sensors</string>
    <string name="bt_title">Bluetooth Classic pairing</string>
    <string name="bt_summary">Opens the Bluetooth settings to synchronize a sensor</string>
    <string name="bt_sensor">Bluetooth sensor</string>
    <string name="btle_title">Bluetooth Smart pairing</string>
    <string name="btle_summary">Select your Bluetooth Smart sensor from the list</string>
    <string name="osm_setup_title">Connect and publishing</string>
    <string name="osm_setup_summary">Sets the authorization, tags, description and visibility to uoload the GPS routes</string>
    <string name="about_title" translation_description="The part '&#8230;' of the string is the ellipsis.">About&#8230;</string>
    <string name="about_details">About MoveOn Sports Tracker</string>
    <string name="hiit">Interval trainings</string>
    <string name="backup_title">Backup</string>
    <string name="about_license">License:</string>
    <string name="about_license_description" translation_description="The '\n' is a carriage return.">MoveOn Sports Tracker is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nMoveOn Sports Tracker is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with MoveOn Sports Tracker. If not, see http://www.gnu.org/licenses/.</string>
    <string name="about_version">Version:</string>
    <string name="about_author_title">Author:</string>
    <string name="about_author" translation_description="The '\n' is a carriage return.">Twitter: https://twitter.com/scintero\nPersonal website: www.saulcintero.com</string>
    <string name="about_project_title">Project:</string>
    <string name="about_project" translation_description="The '\n' is a carriage return.">Source code: https://github.com/scintero/moveon\nE-mail: contact@moveontracker.org\nOfficial website: www.moveontracker.org\nWeb administrator: https://twitter.com/socialangelr</string>
</resources>