<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2015-present Saul Cintero <http://www.saulcintero.com>.

This file is part of MoveOn Sports Tracker.

MoveOn Sports Tracker is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MoveOn Sports Tracker is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MoveOn Sports Tracker. If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            style="@style/TextLarge.WithIcon"
            android:drawableLeft="@drawable/ic_launcher"
            android:text="@string/app_complete_name" />

        <TextView
            style="@style/TextMedium"
            android:text="@string/about_version" />

        <TextView
            android:id="@+id/about_version"
            style="@style/AboutValue" />

        <TextView
            style="@style/TextMedium"
            android:text="@string/about_author_title" />

        <TextView
            android:id="@+id/aboutAuthor"
            style="@style/AboutValue"
            android:autoLink="all"
            android:text="@string/about_author" />
        
        <TextView
            style="@style/TextMedium"
            android:text="@string/about_project_title" />

        <TextView
            style="@style/AboutValue"
            android:autoLink="all"
            android:text="@string/about_project" />

        <TextView
            style="@style/TextMedium"
            android:text="@string/about_license" />

        <TextView
            android:id="@+id/about_license"
            style="@style/AboutValue"
            android:autoLink="web"
            android:text="@string/about_license_description"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>