<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2015-present Saul Cintero <http://www.saulcintero.com>.

This file is part of MoveOn Sports Tracker.

MoveOn Sports Tracker is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MoveOn Sports Tracker is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MoveOn Sports Tracker. If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/coach"
        android:icon="@drawable/coach"
        android:title="@string/voice_coach"/>
    <item
        android:id="@+id/camera"
        android:icon="@drawable/camera"
        android:title="@string/camera"/>
    <item
        android:id="@+id/padlock"
        android:icon="@drawable/padlock"
        android:title="@string/padlock"/>
    <item
        android:id="@+id/music"
        android:icon="@drawable/music"
        android:title="@string/music"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>

</menu>